--- a/patientdashboard/templates/patientdashboard/patient_base.html
+++ b/patientdashboard/templates/patientdashboard/patient_base.html
@@ -1865,6 +1865,9 @@ const dashboardTranslations = {
         'Exercise Completed!': 'Exercice Terminé !',
         'Great job! Your progress has been recorded.': 'Excellent travail ! Vos progrès ont été enregistrés.',
         'Return to Exercises': 'Retour aux Exercices',
+        'min': 'min',
+        'cal': 'cal',
+        'Improve your health with this targeted exercise routine.': 'Améliorez votre santé avec cette routine d\'exercices ciblée.',
         
         // Profile Page
         'Manage your personal information and preferences': 'Gérez vos informations personnelles et préférences',
@@ -1902,6 +1905,18 @@ const dashboardTranslations = {
         'Get help choosing the right specialist': 'Obtenez de l\'aide pour choisir le bon spécialiste',
         'Live Chat': 'Chat en Direct',
         'Chat with our medical advisors': 'Discutez avec nos conseillers médicaux',
+        'FAQ': 'FAQ',
+        'Find answers to common questions': 'Trouvez des réponses aux questions courantes',
+        
+        // Specialty Titles
+        'Occupational Therapist': 'Ergothérapeute',
+        'Physiotherapist': 'Kinésithérapeute',
+        'Neuropsychologist': 'Neuropsychologue',
+        'Speech Therapist': 'Orthophoniste',
+        'Psychologist': 'Psychologue',
+        'Chiropractor': 'Chiropracteur',
+        'Nutritionist': 'Nutritionniste',
+        'General Practitioner': 'Médecin Généraliste',
         
         // Social Security Payment
         'Social Security Number': 'Numéro de Sécurité Sociale',
